argocd/apps/infra/myspeed/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myspeed
  name: myspeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myspeed
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kuma
    spec:
      containers:
        - image: germannewsmaker/myspeed:latest
          imagePullPolicy: IfNotPresent
          name: myspeed
          resources:
            limits:
              cpu: 50m
              memory: 250Mi
            requests:
              cpu: 25m
              memory: 150Mi
          ports:
            - containerPort: 5216
              protocol: TCP
          volumeMounts:
            - mountPath: /myspeed/data
              name: data
          readinessProbe:
            httpGet:
              path: /
              port: 5216
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5216
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
