argocd/apps/infra/myspeed/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: myspeed-app
  name: myspeed-http-route
  namespace: myspeed
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - myspeed.yanello.net
  rules:
  - backendRefs:
    - name: myspeed
      namespace: myspeed
      port: 5216
